--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=SnowbaseMav
-spring.datasource.url=jdbc:sqlite:snowbase.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.datasource.url=${mysql://root:sRZJSaEKINoVnYFZRDRppLjkGTmwJyUI@hopper.proxy.rlwy.net:59425/railway}
+spring.datasource.username=${root}
+spring.datasource.password=${sRZJSaEKINoVnYFZRDRppLjkGTmwJyUI}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8080
